----- cvs ci ------
Sat Dec  9 08:57:16 UTC 2000
dmitry:
+ added docs about tokens packNetmail & maxUnpackedNetmail for bsopack

----- cvs ci ------
Fri Dec  8 04:41:07 UTC 2000
sms:
* string2addr: check if string is non-NULL first

----- cvs ci ------
Fri Dec  8 02:39:38 UTC 2000
sms:
* fixed typo in tparser.c

----- cvs ci ------
Fri Dec  8 01:20:34 UTC 2000
sms:
+ added dirlist option to keyword filelist

----- cvs ci ------
Thu Dec  7 22:21:25 UTC 2000
sms:
+ added keyword filelist

----- cvs ci ------
Thu Dec  7 21:12:01 UTC 2000
sms:
* fixed memory hole in freeLink

----- cvs ci ------
Tue Dec  5 05:54:22 UTC 2000
sms:
+ dumping fileareas and bbsareas

----- cvs ci ------
Tue Dec  5 03:17:40 UTC 2000
sms:
! replaced most stricmp-calls with strcmp-calls on the lower case variant
  of the variable (parsing should be significantly faster now)
! using enum for linkWithImportLog instead of strings

----- cvs ci ------
Tue Dec  5 01:48:22 UTC 2000
sms:
+ added emailSubj, emailFrom, emailEncoding

----- cvs ci ------
Sat Dec  2 02:13:10 UTC 2000
sms:
* temporarily deactivated commentChar support in dump.c

----- cvs ci ------
Sat Dec  2 01:59:28 UTC 2000
sms:
* fixed error message for commentChar
* fixed commentChar output in dump.c

----- cvs ci ------
Sat Dec  2 01:28:45 UTC 2000
sms:
* using strdup for string constants on init, so copyString can free them 
  safely

----- cvs ci ------
Thu Nov 30 15:20:17 NOVT 2000
max:
* dublicate strings safely overwrites the old ones

----- cvs ci ------
Thu Nov 23 23:27:53 NOVT 2000
max (patch from Serguei Revtov):
* using of overString instead of copyString for linkDefaults data copying

----- cvs ci ------
Thu Nov 16 12:23:56 MSK 2000
Fedor:
+ Added new token CommentChar (in tparser too)

----- cvs ci ------
Tue Nov 14 11:23:22 MSK 2000
max (patch from Serguei Revtov):
* BundleNameStyle: addrDiffAlways in tparser

----- cvs ci ------
Mon Nov 13 22:56:43 NOVT 2000
max:
* fixed parsing excludePassthroughCarbon
